social-link customize

--- a/src/Pages/Home/Contact.css
+++ b/src/Pages/Home/Contact.css
@@ -7,3 +7,15 @@
     margin-bottom: 2rem;
 
 }
+
+.social-link1:hover {
+    color: orange;
+}
+
+.social-link2:hover {
+    color: orange;
+}
+
+.social-link3:hover {
+    color: orange;
+}
